--- a/.config/keymapper.conf
+++ b/.config/keymapper.conf
@@ -1,107 +1,13 @@
-ShiftInput = IntlBackslash | Slash
-Symbols = ShiftLeft | ShiftRight
-Numbers = BracketLeft
-# make holding CapsLock = Contrl
-CapsLock{!200ms} >> Escape
-CapsLock >> Control
-
-# Shift Keys
-IntlBackslash >> ShiftRight
-Slash >> ShiftRight
-
 # Window Management
 # Symbol + Num + 1 = Terminal
-(ShiftLeft BracketLeft){J} >> $(sh ~/.scripts/switch-to-term.sh) ^
+F13 >> $(sh ~/.scripts/switch-to-term.sh) ^
 # Symbol + Num + 2 = IDE
 # 2 = VSCode
 # 2 2 = Visual Stupido etc
-(ShiftLeft BracketLeft){K} >> $(wmctrl -a code)
+F14 >> $(run-or-raise 'name ~ ".*Visual Studio Code$"' code)
 # Symbol + Num + 3 = Browser
-(ShiftLeft BracketLeft){L} >> $(wmctrl -a brave)
+F15 >> $(run-or-raise 'name ~ ".*Google Chrome$"' google-chrome)
+F16 >> $(run-or-raise 'name ~ ".*Brave$"' brave-browser)
 
-ShiftLeft{BracketRight} >> Delete
-BracketRight >> Backspace
-
-Quote >> Enter
-
-# Symbols layer
-[modifier = "Symbols"]
-# Top row
-Q >> Shift{1} # !
-W >> Shift{2} # "
-E >> Shift{3} # £
-R >> Shift{4} # $
-T >> Shift{5} # %
-Y >> Shift{6} # ^
-U >> Shift{7} # &
-I >> Shift{8} # *
-O >> Shift{9} # (
-Symbols{P} >> Shift{0} # )
-# Middle row
-S >> Shift{Comma}
-D >> BracketLeft
-F >> Shift{9}
-G >> Shift{BracketLeft}
-H >> Shift{BracketRight}
-J >> Shift{0} # )
-K >> BracketRight # )
-L >> Shift{Period}
-Semicolon >> Semicolon
-# Bottom row
-Z >> IntlBackslash
-B >> Backslash
-N >> Shift{Quote}
-M >> Backslash
-Comma >> Shift{Comma}
-Period >> Shift{Period}
-
-[modifier="(Symbols ShiftInput)"]
-M >> Shift{Backslash}
-Z >> Shift{IntlBackslash}
-Semicolon >> Shift{Semicolon}
-
-[default]
-# Num Layer
-# Top row
-Numbers >>
-[modifier="Numbers"]
-Q >> 1
-W >> 2
-E >> 3
-R >> 4
-T >> 5
-Y >> 6
-U >> 7
-I >> 8
-O >> 9
-P >> 0
-# Middle row
-A >> NumpadMultiply
-S >> NumpadDivide
-D >> NumpadSubtract
-F >> NumpadAdd
-G >> Equal
-H >> ArrowLeft
-J >> ArrowDown
-K >> ArrowUp
-L >> ArrowRight
-Semicolon >> 0
-# Bottom row
-C >> Shift{Minus}
-X >> IntlBackslash
-Z >> Shift{IntlBackslash}
-
-
-[modifier="ShiftInput"]
-# Middle row
-Semicolon >> Shift{2}
-# Bottom row
-Comma >> NumpadDivide
-Period >> Shift{Slash}
-
-[default]
-# Top-layer rebinds
-Semicolon >> Quote
-
-(ShiftLeft IntlBackslash){Semicolon} >> Backquote
-
+# Tab Management
+#AltLeft{F13} >> $(run-or-raise 'name ~ ".*Brave$"' brave-browser) 10ms (Shift AltLeft){N}
